--- a/form.html
+++ b/form.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/form.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&family=Fraunces:opsz,wght@9..144,700&family=Poppins:ital,wght@1,600&display=swap" rel="stylesheet">
     <title>Registro</title>
 </head>
 
@@ -34,7 +38,7 @@
     </header>
     <main>
         <form class="form-register">
-            <h2>Registro</h2>
+            <h2 class="form-register__title">Registro</h2>
             <div class="form__div">
                 <input class="form__input" placeholder="Nombre" type="text" id="input1" name="input1">
             </div>
@@ -50,9 +54,9 @@
             <div>
                 <input class="form__input" placeholder="Validar contraseña" type="text" id="input5" name="input5">
             </div>
-            <div class="form__terminos">
+            <div class="terminos">
                 <div>
-                    <input class="form__checkbox" type="checkbox" id="checkbox" name="checkbox">
+                    <input class="checkbox__terminos" type="checkbox" id="checkbox" name="checkbox">
                 </div>
 
                 <div>
@@ -60,8 +64,10 @@
                 </div>
                </div>
             </div>
-            
-            <button class="form__boton" type="submit">Registrarme</button>
+            <div class="conatiner__register">
+                <button class="boton-register" type="submit">Registrarme</button>
+            </div>
+         
         </form>
 
 
