se agregan estilos al nav

--- a/form.html
+++ b/form.html
@@ -15,14 +15,20 @@
 
 <body>
     <header class="header">
-        <div class="header__search">
-            <input class="header__search-input" type="text" placeholder="Buscar">
-        </div>
-        <div class="header__login">
-            <img class="header__login-image" src="login.png" alt="Iniciar sesión">
-        </div>
-        <div class="header__cart">
-            <img class="header__cart-image" src="cart.png" alt="Carrito de compras">
+        <div class="container__header">
+            <div class="header__search">
+                <input class="header__search-input" type="text" placeholder="Buscar">
+            </div>
+            <div class="header-icons">
+                <div class="icon__login">
+                    <img class="header__login-image" src="img/user-solid.svg" alt="Iniciar sesión"
+                    width="20" height="20">
+                </div>
+                <div class="header__cart">
+                
+                    <img class="icon__cart-image" src="img/cart-shopping-solid.svg" alt="Carrito de compras" width="20" height="20">
+                </div>
+            </div>
         </div>
         <nav class="header__nav">
             <ul class="header__nav-list">
