--- a/categorias.html
+++ b/categorias.html
@@ -9,9 +9,7 @@
   <link rel="stylesheet" href="css/categorias.css">
   <title>Categorias</title>
 </head>
-
 <body>
-
   <header class="header">
     <div class="container__header">
       <div class="header__logo">
@@ -50,13 +48,14 @@
     <div class="container-libro">
       <div class="card-libro">
         <figure class="card-libro__img">
-          <img src="/img/libro.jpg" alt="libro" width="192px" height="220px">
+          <img src="/img/libro.jpg" alt="libro" width="170px" height="170px">
         </figure>
         <div class="card-libro__text">
           <h4>NOMBRE DEL LIBRO</h4>
           <h4>Autor</h4>
           <span>$000.00</span>
           <div class="container-calificación">
+            <span>Calificación:</span>
             <span><img src="img/star-regular.svg" alt="start"></span>
             <span><img src="img/star-regular.svg" alt="start"></span>
             <span><img src="img/star-regular.svg" alt="start"></span>
@@ -65,8 +64,10 @@
           </div>
         </div>
       </div>
+      <div class="container-boton">
+        <button class="boton-detalle" href="#">Ver detalle</button>
+      </div>
     </div>
   </main>
 </body>
-
 </html>
