--- a/categorias.html
+++ b/categorias.html
@@ -44,7 +44,21 @@
       </ul>
     </nav>
   </header>
+  <h1 class="titulo-principal">Listado de Audio Libros</h1>
   <main>
+    <aside class="filtros">
+      <ul class="filtros-lista">
+        <li>
+          FORMATO 
+          <img src="/img/star-regular.svg" alt="">
+        </li>
+        <li>EDITORIAL</li>
+        <li>AUTOR</li>
+        <li>IDIOMA</li>
+        <li>PRECIO</li>
+      </ul>
+    </aside>
+    <section>
     <div class="container-libro">
       <div class="card-libro">
         <figure class="card-libro__img">
@@ -68,6 +82,192 @@
         <button class="boton-detalle" href="#">Ver detalle</button>
       </div>
     </div>
+    <div class="container-libro">
+      <div class="card-libro">
+        <figure class="card-libro__img">
+          <img src="/img/libro.jpg" alt="libro" width="170px" height="170px">
+        </figure>
+        <div class="card-libro__text">
+          <h4>NOMBRE DEL LIBRO</h4>
+          <h4>Autor</h4>
+          <span>$000.00</span>
+          <div class="container-calificación">
+            <span>Calificación:</span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+          </div>
+        </div>
+      </div>
+      <div class="container-boton">
+        <button class="boton-detalle" href="#">Ver detalle</button>
+      </div>
+    </div>
+    <div class="container-libro">
+      <div class="card-libro">
+        <figure class="card-libro__img">
+          <img src="/img/libro.jpg" alt="libro" width="170px" height="170px">
+        </figure>
+        <div class="card-libro__text">
+          <h4>NOMBRE DEL LIBRO</h4>
+          <h4>Autor</h4>
+          <span>$000.00</span>
+          <div class="container-calificación">
+            <span>Calificación:</span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+          </div>
+        </div>
+      </div>
+      <div class="container-boton">
+        <button class="boton-detalle" href="#">Ver detalle</button>
+      </div>
+    </div>
+    <div class="container-libro">
+      <div class="card-libro">
+        <figure class="card-libro__img">
+          <img src="/img/libro.jpg" alt="libro" width="170px" height="170px">
+        </figure>
+        <div class="card-libro__text">
+          <h4>NOMBRE DEL LIBRO</h4>
+          <h4>Autor</h4>
+          <span>$000.00</span>
+          <div class="container-calificación">
+            <span>Calificación:</span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+          </div>
+        </div>
+      </div>
+      <div class="container-boton">
+        <button class="boton-detalle" href="#">Ver detalle</button>
+      </div>
+    </div>
+    <div class="container-libro">
+      <div class="card-libro">
+        <figure class="card-libro__img">
+          <img src="/img/libro.jpg" alt="libro" width="170px" height="170px">
+        </figure>
+        <div class="card-libro__text">
+          <h4>NOMBRE DEL LIBRO</h4>
+          <h4>Autor</h4>
+          <span>$000.00</span>
+          <div class="container-calificación">
+            <span>Calificación:</span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+          </div>
+        </div>
+      </div>
+      <div class="container-boton">
+        <button class="boton-detalle" href="#">Ver detalle</button>
+      </div>
+    </div>
+    <div class="container-libro">
+      <div class="card-libro">
+        <figure class="card-libro__img">
+          <img src="/img/libro.jpg" alt="libro" width="170px" height="170px">
+        </figure>
+        <div class="card-libro__text">
+          <h4>NOMBRE DEL LIBRO</h4>
+          <h4>Autor</h4>
+          <span>$000.00</span>
+          <div class="container-calificación">
+            <span>Calificación:</span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+          </div>
+        </div>
+      </div>
+      <div class="container-boton">
+        <button class="boton-detalle" href="#">Ver detalle</button>
+      </div>
+    </div>
+    <div class="container-libro">
+      <div class="card-libro">
+        <figure class="card-libro__img">
+          <img src="/img/libro.jpg" alt="libro" width="170px" height="170px">
+        </figure>
+        <div class="card-libro__text">
+          <h4>NOMBRE DEL LIBRO</h4>
+          <h4>Autor</h4>
+          <span>$000.00</span>
+          <div class="container-calificación">
+            <span>Calificación:</span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+          </div>
+        </div>
+      </div>
+      <div class="container-boton">
+        <button class="boton-detalle" href="#">Ver detalle</button>
+      </div>
+    </div>
+    <div class="container-libro">
+      <div class="card-libro">
+        <figure class="card-libro__img">
+          <img src="/img/libro.jpg" alt="libro" width="170px" height="170px">
+        </figure>
+        <div class="card-libro__text">
+          <h4>NOMBRE DEL LIBRO</h4>
+          <h4>Autor</h4>
+          <span>$000.00</span>
+          <div class="container-calificación">
+            <span>Calificación:</span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+          </div>
+        </div>
+      </div>
+      <div class="container-boton">
+        <button class="boton-detalle" href="#">Ver detalle</button>
+      </div>
+    </div>
+    <div class="container-libro">
+      <div class="card-libro">
+        <figure class="card-libro__img">
+          <img src="/img/libro.jpg" alt="libro" width="170px" height="170px">
+        </figure>
+        <div class="card-libro__text">
+          <h4>NOMBRE DEL LIBRO</h4>
+          <h4>Autor</h4>
+          <span>$000.00</span>
+          <div class="container-calificación">
+            <span>Calificación:</span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span><img src="img/star-regular.svg" alt="start"></span>
+          </div>
+        </div>
+      </div>
+      <div class="container-boton">
+        <button class="boton-detalle" href="#">Ver detalle</button>
+      </div>
+    </div>
+
+    </section>
   </main>
 </body>
 </html>
