se agrega estilos asides

--- a/categorias.html
+++ b/categorias.html
@@ -50,12 +50,18 @@
       <ul class="filtros-lista">
         <li>
           FORMATO 
-          <img src="/img/star-regular.svg" alt="">
+          <img src="/img/plus-solid (1).svg" alt="+">
         </li>
-        <li>EDITORIAL</li>
-        <li>AUTOR</li>
-        <li>IDIOMA</li>
-        <li>PRECIO</li>
+        <li>EDITORIAL
+          <img src="/img/plus-solid (1).svg" alt="+">
+        </li>
+        <li>AUTOR
+          <img src="/img/plus-solid (1).svg" alt="+">
+        </li>
+        <li>IDIOMA
+          <img src="/img/plus-solid (1).svg" alt="+">
+        </li>
+        <li>PRECIO <img src="/img/plus-solid (1).svg" alt="+"></li>
       </ul>
     </aside>
     <section>
