se agrega estilos asides

--- a/categorias.html
+++ b/categorias.html
@@ -48,20 +48,48 @@
   <main>
     <aside class="filtros">
       <ul class="filtros-lista">
-        <li>
-          FORMATO 
-          <img src="/img/plus-solid (1).svg" alt="+">
-        </li>
-        <li>EDITORIAL
-          <img src="/img/plus-solid (1).svg" alt="+">
-        </li>
-        <li>AUTOR
-          <img src="/img/plus-solid (1).svg" alt="+">
-        </li>
-        <li>IDIOMA
-          <img src="/img/plus-solid (1).svg" alt="+">
-        </li>
-        <li>PRECIO <img src="/img/plus-solid (1).svg" alt="+"></li>
+        <div class="filtros-elemento">
+          <div class="filtros-elemento--formato">
+            <li>FORMATO</li>
+          </div>
+          <div class="filtros-elemento--agregar">
+            <div><img src="/img/plus-solid (1).svg" alt="+"></div>
+          </div>
+        </div>
+        <div class="filtros-elemento">
+          <div>
+            <li>EDITORIAL</li>
+          </div>
+          <div>
+            <img src="/img/plus-solid (1).svg" alt="+">
+          </div>
+        </div>
+        <div class="filtros-elemento">
+          <div>
+            <li>AUTOR</li>
+          </div>
+          <div>
+            <img src="/img/plus-solid (1).svg" alt="+">
+          </div>
+        </div>
+        <div class="filtros-elemento">
+          <div>
+            <li>IDIOMA</li>
+          </div>
+          <div>
+            <img src="/img/plus-solid (1).svg" alt="+">
+          </div>
+        </div>
+        <div class="filtros-elemento">
+          <div>
+            <li>PRECIO</li>
+          </div>
+          <div>
+            <img src="/img/plus-solid (1).svg" alt="+">
+          </div>
+        </div>
+
+
       </ul>
     </aside>
     <section>
@@ -260,7 +288,7 @@
           <span>$000.00</span>
           <div class="container-calificación">
             <span>Calificación:</span>
-            <span><img src="img/star-regular.svg" alt="start"></span>
+            <span ><img src="img/star-regular.svg" alt="start"></span>
             <span><img src="img/star-regular.svg" alt="start"></span>
             <span><img src="img/star-regular.svg" alt="start"></span>
             <span><img src="img/star-regular.svg" alt="start"></span>
