se agrega imagenes al nav

--- a/categorias.html
+++ b/categorias.html
@@ -14,7 +14,7 @@
     <div class="container__header">
       <div class="header__logo">
         <figure class="header__logo-imagen-texto">
-          <img class="header__logo-image" src="../imagenes/book (1).svg" alt="Iniciar sesión" width="50" height="50">
+          <img class="header__logo-image" src="img/book.svg" alt="Iniciar sesión" width="50" height="50">
           <figcaption class="header__logo-texto">BOOK SEARCH</figcaption>
         </figure>
       </div>
@@ -23,11 +23,11 @@
       </div>
       <div class="header-icons">
         <div class="icon__login">
-          <img class="header__login-image" src="../imagenes/cart-shopping-solid.svg" alt="Iniciar sesión" width="30"
+          <img class="header__login-image" src="img/user-solid.svg" alt="Iniciar sesión" width="30"
             height="30">
         </div>
         <div class="header__cart">
-          <img class="icon__cart-image" src="../imagenes/user-solid.svg" alt="Carrito de compras" width="30"
+          <img class="icon__cart-image" src="img/cart-shopping-solid.svg" alt="Carrito de compras" width="30"
             height="30">
         </div>
       </div>
