--- a/form.html
+++ b/form.html
@@ -2,82 +2,109 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/form.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Delius+Unicase&family=Fraunces:opsz,wght@9..144,700&family=Poppins:ital,wght@1,600&display=swap" rel="stylesheet">
-    <title>Registro</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/form.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Delius+Unicase&family=Fraunces:opsz,wght@9..144,700&family=Poppins:ital,wght@1,600&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="css/header.css">
+  <title>Registro</title>
 </head>
 
 <body>
-    <header class="header">
-        <div class="container__header">
-            <div class="header__search">
-                <input class="header__search-input" type="text" placeholder="Buscar">
-            </div>
-            <div class="header-icons">
-                <div class="icon__login">
-                    <img class="header__login-image" src="img/user-solid.svg" alt="Iniciar sesión"
-                    width="20" height="20">
-                </div>
-                <div class="header__cart">
-                
-                    <img class="icon__cart-image" src="img/cart-shopping-solid.svg" alt="Carrito de compras" width="20" height="20">
-                </div>
-            </div>
+  <header class="header">
+    <div class="container__header">
+      <div class="header__logo">
+        <figure class="header__logo-imagen-texto">
+          <img class="header__logo-image" src="img/book.svg" alt="Iniciar sesión" width="50" height="50">
+          <figcaption class="header__logo-texto">BOOK SEARCH</figcaption>
+        </figure>
+      </div>
+      <div class="header__search">
+        <input class="header__search-input" type="text" placeholder="Buscar por autor, título o categoría ">
+      </div>
+      <div class="header-icons">
+        <div class="icon__login">
+          <img class="header__login-image" src="img/user-solid.svg" alt="Iniciar sesión" width="30"
+            height="30">
         </div>
-        <nav class="header__nav">
-            <ul class="header__nav-list">
-                <li class="header__nav--categorias"><a href="pagina1.html">Categorías</a></li>
-                <li class="header__nav-item"><a href="pagina2.html">Audiolibros </a></li>
-                <li class="header__nav-item"><a href="pagina3.html">Autores</a></li>
-                <li class="header__nav-item"><a href="pagina4.html">Editoriales</a></li>
-                <li class="header__nav-item"><a href="pagina5.html">Libreria</a></li>
-                <li class="header__nav-item"><a href="pagina6.html">Más vendidos</a></li>
-                <li class="header__nav--recomendaciones"><a href="pagina7.html">Recomendaciones</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <form class="form-register">
-            <h2 class="form-register__title">Registro</h2>
-            <div class="form__div">
-                <input class="form__input" placeholder="Nombre" type="text" id="input1" name="input1">
-            </div>
-            <div>
-                <input class="form__input" placeholder="Apellido" type="text" id="input2" name="input2">
-            </div>
-            <div>
-                <input class="form__input" placeholder="Correo" type="text" id="input3" name="input3">
-            </div>
-            <div>
-                <input class="form__input" placeholder="Contraseña" type="text" id="input4" name="input4">
-            </div>
-            <div>
-                <input class="form__input" placeholder="Validar contraseña" type="text" id="input5" name="input5">
-            </div>
-            <div class="terminos">
-                <div>
-                    <input class="checkbox__terminos" type="checkbox" id="checkbox" name="checkbox">
-                </div>
+        <div class="header__cart">
+          <img class="icon__cart-image" src="img/cart-shopping-solid.svg" alt="Carrito de compras" width="30"
+            height="30">
+        </div>
+      </div>
+    </div>
+    <nav class="header__nav">
+      <ul class="header__nav-list">
+        <li class="header__nav--categorias"><a href="pagina1.html">Categorías</a></li>
+        <li class="header__nav-item"><a href="pagina2.html">Audiolibros </a></li>
+        <li class="header__nav-item"><a href="pagina3.html">Autores</a></li>
+        <li class="header__nav-item"><a href="pagina4.html">Editoriales</a></li>
+        <li class="header__nav-item"><a href="pagina5.html">Libreria</a></li>
+        <li class="header__nav-item"><a href="pagina6.html">Más vendidos</a></li>
+        <li class="header__nav--recomendaciones"><a href="pagina7.html">Recomendaciones</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <form class="form-register">
+      <h2 class="form-register__title">Registro</h2>
+      <div class="form__div">
+        <input class="form__input" placeholder="Nombre" type="text" id="input1" name="input1">
+      </div>
+      <div>
+        <input class="form__input" placeholder="Apellido" type="text" id="input2" name="input2">
+      </div>
+      <div>
+        <input class="form__input" placeholder="Correo" type="text" id="input3" name="input3">
+      </div>
+      <div>
+        <input class="form__input" placeholder="Contraseña" type="text" id="input4" name="input4">
+      </div>
+      <div>
+        <input class="form__input" placeholder="Validar contraseña" type="text" id="input5" name="input5">
+      </div>
+      <div>
+        <label for="membresias">Tipo de membresia</label>
+        <select  id="membresias">
+          <option value="" selected disabled>Selecciona una opción</option>
+          <optgroup label="membresias">
+            <option value="membresia1">Básica</option>
+            <option value="membresia 2">Regular</option>
+            <option value="membresia 3">Premium</option>
+          </optgroup>
+        </select>
+      </div>
+      <div class="terminos">
+        <div>
+          <input class="checkbox__terminos" type="checkbox" id="checkbox" name="checkbox">
+        </div>
 
-                <div>
-                    <label for="checkbox">Aceptar terminos y condiciones</label>
-                </div>
-               </div>
-            </div>
-            <div class="conatiner__register">
-                <button class="boton-register" type="submit">Registrarme</button>
-            </div>
-         
-        </form>
+        <div>
+          <label for="checkbox">Aceptar terminos y condiciones</label>
+        </div>
+      </div>
+      </div>
+      <div>
+        <p>¿Deseas recibir Newsletter?</p>
+        <input  type="radio" name="acepto" value="" >
+        <label for="">Sí, acepto.</label><br>
+        <input type="radio" name="acepto" value="">
+        <label for="">No</label><br>
+      </div>
+      <div class="conatiner__register">
+        <button class="boton-register" type="submit">Registrarme</button>
+      </div>
+
+    </form>
 
 
-    </main>
+  </main>
 
 </body>
 
