se borran cambios de evaluación

--- a/form.html
+++ b/form.html
@@ -12,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Delius+Unicase&family=Fraunces:opsz,wght@9..144,700&family=Poppins:ital,wght@1,600&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/header.css">
   <title>Registro</title>
 </head>
 
@@ -30,8 +30,7 @@
       </div>
       <div class="header-icons">
         <div class="icon__login">
-          <img class="header__login-image" src="img/user-solid.svg" alt="Iniciar sesión" width="30"
-            height="30">
+          <img class="header__login-image" src="img/user-solid.svg" alt="Iniciar sesión" width="30" height="30">
         </div>
         <div class="header__cart">
           <img class="icon__cart-image" src="img/cart-shopping-solid.svg" alt="Carrito de compras" width="30"
@@ -69,17 +68,6 @@
       <div>
         <input class="form__input" placeholder="Validar contraseña" type="text" id="input5" name="input5">
       </div>
-      <div>
-        <label for="membresias">Tipo de membresia</label>
-        <select  id="membresias">
-          <option value="" selected disabled>Selecciona una opción</option>
-          <optgroup label="membresias">
-            <option value="membresia1">Básica</option>
-            <option value="membresia 2">Regular</option>
-            <option value="membresia 3">Premium</option>
-          </optgroup>
-        </select>
-      </div>
       <div class="terminos">
         <div>
           <input class="checkbox__terminos" type="checkbox" id="checkbox" name="checkbox">
@@ -91,15 +79,9 @@
       </div>
       </div>
       <div>
-        <p>¿Deseas recibir Newsletter?</p>
-        <input  type="radio" name="acepto" value="" >
-        <label for="">Sí, acepto.</label><br>
-        <input type="radio" name="acepto" value="">
-        <label for="">No</label><br>
-      </div>
-      <div class="conatiner__register">
-        <button class="boton-register" type="submit">Registrarme</button>
-      </div>
+        <div class="conatiner__register">
+          <button class="boton-register" type="submit">Registrarme</button>
+        </div>
 
     </form>
 
