--- a/HTML/detalle-libro.html
+++ b/HTML/detalle-libro.html
@@ -189,10 +189,92 @@
     </div>
     </div>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15019435.339181468!2d-113.26966873778808!3d23.21197872928918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84043a3b88685353%3A0xed64b4be6b099811!2zTcOpeGljbw!5e0!3m2!1ses-419!2smx!4v1685495631420!5m2!1ses-419!2smx" width="540" height="610" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15019435.339181468!2d-113.26966873778808!3d23.21197872928918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84043a3b88685353%3A0xed64b4be6b099811!2zTcOpeGljbw!5e0!3m2!1ses-419!2smx!4v1685495631420!5m2!1ses-419!2smx" width="540" height="610" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
         </div>
     </section>
-    
+   
+    <footer>
+        <section>
+        <div class="footer__logo">
+            <figure class="footer__logo-imagen-texto">
+                <img class="footer__logo-image" src="../imagenes/book (1).svg" alt="Iniciar sesión"
+                width="50" height="50">
+            <figcaption class="footer__logo-texto">BOOK SEARCH</figcaption>
+        </figure>
+        </div>
+        <div class="footer__listas">
+        <section class="ficha1"> 
+            <div class="ficha__lista1-1">
+                <ul class="ficha__lista1-1-1"> 
+                    <li>Nuestra empresa</li> <br> 
+                    <li>Sobre nosotros</li> 
+                    <li>Librerías</li> 
+                    <li>Blog</li> 
+                </ul>
+            </div>
+            <div class="ficha__lista2-2">
+                <ul class="ficha__lista2-2-2"> 
+                    <li>Información legal</li> <br> 
+                    <li>Condiciones de uso</li> 
+                    <li>Protección de datos</li> 
+                    <li>Política de privacidad</li> 
+                    <li>Política de devoluciones</li>
+                </ul>
+            </div>
+            <div class="ficha__lista3-3">
+                <ul class="ficha__lista3-3"> 
+                    <li>Ayuda</li> <br> 
+                    <li>Devoluciones</li> 
+                    <li>Gastos y formas de envío</li> 
+                    <li>Estado de tu pedido</li> 
+                    <li>Preguntas frecuentes </li>
+                </ul>
+            </div>
+        </section>
+        </div>
+            <div class="news">
+                <img class="new__tex-img" src="../imagenes/baseline-email (1).svg" alt=""> <br>
+                <h2 class="new-tit">Recibe nuestras novedades en libros en tu email
+                </h2> <br>
+                <p class="new-parra">Book search tratará tus datos personales para informarte de nuestras novedades y descuentos. Conservaremos tus datos mientras no te des de baja o nos solicites su supresión. </p><br>
+                <div class="news__barra"  ><br>
+                <input class="news__barra-input"  type="email" size="50" placeholder="ejemplo@hotmail.com"><br>
+                <div> <br>
+                <button>SUSCRIBIRME</button></div>
+            </div></div><br><br><br>
+            <div class="footer__redes">
+                <div class="footer__texto-redes">
+                    <a href="https://www.linkedin.com/">
+                        <img src="../imagenes/linkedin.svg" width="30" height="30"alt="">
+                    </a>
+                    <a href="https://www.instagram.com/" target="
+                    ">
+                    <img src="../imagenes/instagram (1).svg" width="30" height="30" alt="">
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <img src="../imagenes/baseline-facebook (1).svg" width="30" height="30"alt="">
+                    </a>
+                    <a href="https://twitter.com/" target="_blank">
+                        <img src="../imagenes/twitter (1).svg" width="30" height="30" alt="">
+                    </a>
+                    <a href="https://www.pinterest.com.mx/" target="_blank">
+                        <img src="../imagenes/pinterest (1).svg" width="30" height="30" alt="">
+                    </a>
+                    <a href="https://www.whatsapp.com/" target="_blank">
+                        <img src="../imagenes/baseline-whatsapp (1).svg" width="30" height="30"alt="">
+                    </a> <h1 class="footer__separador">|</h1>
+                    <div>
+                        <img class="new__tex-img" src="../imagenes/baseline-email (1).svg" alt=""> 
+                    </div><h1 class="footer__text">Contacto</h1>
+                    <h1 class="footer__separador">|</h1>
+                    <h1 class="footer__text">Lunes a Viernes de 9am a 7pm</h1>
+                    <h1 class="footer__separador">|</h1>
+                    <img class="new__tex-img" src="../imagenes/phone-fill.svg" alt="">
+                    <h1 class="footer__text">+525582936172</h1>
+                </div>
+            </div>
+        </section>
+    </footer>
     
 </body>
 </html>
