--- a/HTML/detalle-libro.html
+++ b/HTML/detalle-libro.html
@@ -112,7 +112,7 @@
     <section class="ficha">
         <h1 class="parra__titulo">Ficha técnica </h1><br>
         <div class="ficha__lista1">
-            <ul class="ficha__lista1-1">
+            <ul class="ficha__lista1">
                 <li>Nº de páginas: 672</li> <br>
                 <li>Editorial: PLANETA</li> <br>
                 <li>Idioma: CASTELLANO</li> <br>
@@ -121,7 +121,7 @@
             </ul>
         </div>
         <div class="ficha__lista2">
-            <ul class="ficha__lista2-2">
+            <ul class="ficha__lista2">
                 <li>Año de edición: 2023</li> <br>
                 <li>Plaza de edición: BARCELONA</li> <br>
                 <li>Fecha de lanzamiento: 10/05/2023</li> <br>
@@ -191,6 +191,11 @@
         <div class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15019435.339181468!2d-113.26966873778808!3d23.21197872928918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x84043a3b88685353%3A0xed64b4be6b099811!2zTcOpeGljbw!5e0!3m2!1ses-419!2smx!4v1685495631420!5m2!1ses-419!2smx" width="540" height="610" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
         </div>
+    </section>
+    <section class="carrusel">
+        <h1 class="carrusel__tit">LIBROS MÁS VENDIDOS</h1>
+        <div class="carrusel__cards"></div>
+
     </section>
    
     <footer>
